# UmaNakama

./: .gitignore  README.md  config.json  main.py  pyproject.toml  region_overlay.py  requirements.txt  settings_overlay.py  status_overlay.py  support_events.json  text_overlay.py  trainee_events.json
core/: config.py  events.py  window.py
events/: conditions.json  parsed_skills.json  support_events_OLD.json  trainee_events.json  trainee_events_by_character.json  trainee_names.json
ocr/: debug.py  preprocess.py  reader.py
overlays/: condtion_overlay.py  region_overlay.py  settings_overlay.py  skill_overlay.py  status_overlay.py  text_overlay.py  trainee_picker_overlay.py
services/: portraits.py
ui/: character_picker.py  ui_proxy.py
util/: SupportScraper.py  TraineeByNameScraper.py  TraineeScraper.py  conditionScraper.py  region.py  setup.py  skillScraper.py  skills_description.json
